--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                HyperBlog <span id="tagline">Tu blog de Confianza</span>
+                HyperBlog <span id="tagline">Tu blog de Confianza 2.0</span>
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
