--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img src="./imagenes/dragon.webp" id="logo" alt="">
                 HyperBlog <span id="tagline">Tu blog de Confianza 2.0</span>
             </div>
             <div id="post">
