--- a/blogpost.html
+++ b/blogpost.html
@@ -11,8 +11,8 @@
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
-                <p>Y este es el pàrrafo de inicio donde vamos a explicar las cosas increìbles que se pueden hacer con ramas</p>
-                <p>Y este es el pàrrafo de inicio donde vamos a explicar las cosas increìbles que se pueden hacer con ramas</p>
+                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
+                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
             </div>
         </div>
         <div class="footer">
